--- a/models/src_google_sheets.yml
+++ b/models/src_google_sheets.yml
@@ -4,7 +4,7 @@ sources:
 
   - name: google_sheets # name of the source 
     schema: google_sheets # this is the schema our raw data lives in
-    database: <NOMBRE_USUARIO>_BRONZE_DB # this is the name of our database
+    database: ESPECIALIDAD_SQL_BRONZE_DB_VBM # this is the name of our database
 
     quoting:
       database: false
